spawn registration working!! (i hate forge)